[tool.poetry]
name = "accelerator-intro-machine-learning"
version = "0.1.0"
description = ""
authors = ["wim-peter <wim-peter.dirks@ordina.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
matplotlib = "^3.8.2"
numpy = "^1.26.3"
python = "^3.9"
scikit-learn = "^1.3.2"
scikit-image = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
